--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <!-- Theme Toggle -->
       <div class="controls">
-        <button id="themeToggle" class="theme-btn" aria-pressed="true">Switch to Blue Mode</button>
+        <button id="themeToggle" class="theme-btn" aria-pressed="true">Switch to Light Mode</button>
       </div>
     </div>
 
@@ -117,3 +117,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
