--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="medical_icon.ico">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=1" />
 </head>
 <body class="dark-mode">
   <!-- Header with subtle light overlay (the light effect) -->
@@ -114,7 +114,8 @@
     <p>© 2025 Arkansas Medical Billing — Comment Generator v3.1</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="script.js?v=1"></script>
 </body>
 </html>
+
 
